fix: some tailwind alignment on page content

--- a/src/css/style.css
+++ b/src/css/style.css
@@ -19,13 +19,13 @@
   .heading_pattern {
     background-color: rgba(105, 97, 59, 0.2);
     @apply inline-block px-2 py-1 text-center text-base rounded-none w-11/12 lg:w-10/12 mx-auto
-    text-xl sm:text-xl md:text-2xl lg:text-4xl sm:py-2 md:py-2 md:px-2 sm:rounded-md md:rounded-md
+     sm:py-2 md:py-2 md:px-2 sm:rounded-md md:rounded-md
     backdrop-filter backdrop-blur-2xl
     text-purple-100 text-shadow-lg;
   }
 
-  .heading_pattern h1 {
-    @apply font-semibold text-xs sm:text-base md:text-lg uppercase;
+   h1.heading_pattern {
+    @apply font-semibold text-xl sm:text-2xl md:text-3xl lg:text-5xl;
   }
 
   h5 {
